[package]
name = "Harbor"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.50.0", features = ["full", "rt-multi-thread"] }
nix = { version = "0.31.2", features = ["user", "net"] }
pnet = "0.35.0"
rtnetlink = "0.20.0"
oui-data = "0.2.1"

# async-trait = "0.1.89"

# [dev-dependencies]
# tokio-test = "0.4.5"

